# game_scratch_by_sdl

./: .gitignore  .gitmodules  CMakeLists.txt  GameConfig.h.in  Makefile  README.md  map1.tmx
assets/: map1.tmx  map2.tmx  test.xml
assets/tiled/: tiled.tmx
src/: AnimatedGraphic.cpp  AnimatedGraphic.h  Bullet.h  BulletHander.cpp  BulletHandler.h  Collision.h  CollisionManager.cpp  CollisionManager.h  Enemy.cpp  Enemy.h  Game.cpp  Game.h  GameObject.h  GameObjectFactory.cpp  GameObjectFactory.h  GameOverState.cpp  GameOverState.h  GameState.h  GameStateMachine.cpp  GameStateMachine.h  Glider.h  InputHandler.cpp  InputHandler.h  Layer.h  Level.cpp  Level.h  LevelParser.cpp  LevelParser.h  LoaderParams.cpp  LoaderParams.h  MainMenuState.cpp  MainMenuState.h  Makefile  MenuButton.cpp  MenuButton.h  MenuState.cpp  MenuState.h  ObjectLayer.cpp  ObjectLayer.h  PauseState.cpp  (+26 more)
